--- a/Assignment 1/Assignment 1.tex
+++ b/Assignment 1/Assignment 1.tex
@@ -95,9 +95,9 @@ E3: 0 Red / 2 White balls are drawn\\\\
 Let X denote the number of red balls recorded in 
 the two draws\\
 \begin{align}
-P(X = 2) = \frac{1}{3} * \frac{1}{3} = \frac{1}{9}\\\
-P(X = 1) = \left(\frac{1}{3} * \frac{2}{3}\right) * 2 = \frac{4}{9}\\\
-P(X = 0) = \frac{2}{3} * \frac{2}{3} = \frac{4}{9}
+P(X = 2) = \frac{1}{3} \times \frac{1}{3} = \frac{1}{9}\\\
+P(X = 1) = \left(\frac{1}{3} \times \frac{2}{3}\right) 2 = \frac{4}{9}\\\
+P(X = 0) = \frac{2}{3} \times \frac{2}{3} = \frac{4}{9}
 \end{align}
 
 
