--- a/Assignment 1/Assignment 1.tex
+++ b/Assignment 1/Assignment 1.tex
@@ -87,12 +87,7 @@ noting it's color. The process is repeated again.
 If X denotes the number of red balls recorded in the
 two draws, describe X
 \section{Solution}
-
-Possible events:\\
-E1: 2 Red balls are drawn\\
-E2: 1 Red and 1 White ball is drawn\\
-E3: 0 Red / 2 White balls are drawn\\\\
-Let X denote the number of red balls recorded in 
+Let X $\in$ \{0, 1, 2\}  denote the number of red balls recorded in 
 the two draws\\
 \begin{align}
 P(X = 2) = \frac{1}{3} \times \frac{1}{3} = \frac{1}{9}\\\
