--- a/Assignment 2/Assignment 2.tex
+++ b/Assignment 2/Assignment 2.tex
@@ -2,7 +2,7 @@
 
 \usepackage{setspace}
 \usepackage{gensymb}
-\singlespacing
+\singlespacinzg
 \usepackage[cmex10]{amsmath}
 
 \usepackage{amsthm}
@@ -72,13 +72,13 @@ columns=fullflexible
 \renewcommand{\thetable}{\theenumi}
 Download all python codes from 
 \begin{lstlisting}
-https://github.com/VIB2020/AI1103/blob/main/Assignment%201/code/Assignment%202.py
+https://github.com/VIB2020/AI1103/blob/main/Assignment%202/code/Assignment%202.py
 \end{lstlisting}
 %
 and latex-tikz codes from 
 %
 \begin{lstlisting}
-https://github.com/VIB2020/AI1103/blob/main/Assignment%201/Assignment%202.tex
+https://github.com/VIB2020/AI1103/blob/main/Assignment%202/Assignment%202.tex
 \end{lstlisting}
 \section{\Large Problem \large GATE 2009 (CS), Q.21}
 An unbalanced dice (with 6 faces, numbered from 1 to 6) is thrown. The probability that the face value is odd is 90\% of the probability that the face value is even. The probability of getting any even numbered face is the same. If the probability that the face is even given that it is greater than 3 is 0.75, which one of the following options is closest to the probability that the face value exceeds 3?\\[7pt]
@@ -87,40 +87,34 @@ An unbalanced dice (with 6 faces, numbered from 1 to 6) is thrown. The probabili
  C: 0.485\\
  D: 0.492\\
 \section{\Large Solution}
-Let $X_i$ denote the independent event of number i appearing on 
-the dice\\\
-To find: probability that the face value exceeds 3 i.e P(X > 3)
+Let $X$ denote the independent event of EVEN number appearing on 
+the dice\\
+X can take the values 2, 4, 6 all of which are EQUALLY likely\\
+Let $Y$ denote the independent event of ODD number appearing on 
+the dice\\
+Y can take the values 1, 3, 5\\\
+To find: probability that the face value exceeds 3\\[5pt]
 Sum of all probabilities = 1\\[5pt]
+P(X) + P(Y) = 1\\[5pt]
+Given probability that the face value is odd is 90\% of the\\ probability that the face value is even
 \begin{align}
-\implies \space X_1 + X_2 + X_3 + X_4 + X_5 + X_6 = 1 \longrightarrow
+P(Y) = 0.9P(X)\\
+\implies P(X)\times (1 + 0.9) = 1\\
+P(X) = \frac{10}{19} \implies P(Y) = \frac{9}{19}
+\end{align}\\[5pt]
+Given: X = 2, X = 4, X = 6 are EQUALLY likely\\[5pt]
+
+$P(X = 2) = P(X = 4) = P(X = 6) = \dfrac{P(X)}{3} = \dfrac{10}{57}\\$
+\begin{align}
+P\left(\dfrac{X}{(X > 3)\cup (Y > 3)}\right) = 0.75\\[5pt]
+\dfrac{P(X = 4) + P(X = 6)}{P(X = 4) + P(Y = 5) + P(X = 6)} = 0.75\\[5pt]
+P(Y = 5) = \dfrac {P(X = 4) + P(X = 6)}{3}\\[5pt]
+= \frac{1}{3}\times\frac{20}{57} = \frac{20}{171}\\[5pt]
+P((X > 3) \cup\ (Y > 3)) = P(X > 3) + P(Y > 3)\\[4pt]
+= P(X = 4) + P(Y = 5) + P(X = 6)\\
+= \dfrac{10}{57} + \dfrac{10}{57} + \dfrac{20}{171} = \dfrac{80}{171} = 0.46755 \approx 0.468
 \end{align}
-Given $X_2$, $X_4$, $X_6$ are equally likely\\
-Let $P(X_2) = P(X_4) = P(X_6) = x $
-\begin{align}
-\implies 3x + X_1 + X_3 + X_5 = 1
-\end{align}
-Given probability that the face value is odd is 90\% of the probability that the face value is even
-\begin{align}
-\implies P(X_1 + X_3 + X_5) = 0.9 \times P(X_2 + X_4 + X_6)\\
- = 0.9 \times (3x) = 2.7x
- \end{align}
-From Eqn 1: 5.7x = 1
-\begin{align}
-    x = \frac{10}{57}
-\end{align}
-Given the probability that the face is even given that it is greater than 3 is 0.75\\
-Let $E_1$ be the event where the face value X on the die is EVEN.\\
-Let $E_2$ be the event where the face value X on the die is greater then three.
-\begin{align}
-P\left(\frac{E_1}{E_2}\right) = 0.75\\
-P(E_2) = P(X_4) + P(X_5) + P(X_6) = 2x + P(X_5)\\[5pt]
-P \left( \frac{E_1}{E_2} \right) = \frac{P(E_1 \cap E_2)}{P(E_2)}\\[5pt]
-P(E_1 \cap E_2) = P(X_4) + P(X_5) + P(X_6) = 2x\\[5pt]
-\implies \frac{2x}{P(X_5) + 2x} = 0.75 \implies
-P(X_5) = \frac{x}{1.5}\\[3pt]
-\implies P(E_2) = 2x + P(X_5) = 2x + \frac{x}{1.5}\\[5pt]
-= x \times \frac{8}{3} = \frac{10}{57} \times \frac{8}{3} = 0.46755 \approx 0.468
-\end{align}\\
-\centering \large P(\normal Face value \large $>$ 3) = 0.468\\[5pt]
+\centering
+\Large P(Face value $>$ 3) = 0.468\\[5pt]
 Option B
 \end{document}
