--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -63,7 +63,7 @@ breaklines=true,
 columns=fullflexible
 }
 \begin{document}
-\title{Assignment 2}
+\title{Assignment 3}
 \author{Vibhavasu Pasumarti - EP20BTECH11015}
 \maketitle
 \newpage
@@ -72,15 +72,15 @@ columns=fullflexible
 \renewcommand{\thetable}{\theenumi}
 Download all python codes from 
 \begin{lstlisting}
-https://github.com/VIB2020/AI1103/blob/main/Assignment%202/code/Assignment%202.py
+https://github.com/VIB2020/AI1103/blob/main/Assignment%203/code/Assignment%203.py
 \end{lstlisting}
 %
 and latex-tikz codes from 
 %
 \begin{lstlisting}
-https://github.com/VIB2020/AI1103/blob/main/Assignment%202/Assignment%202.tex
+https://github.com/VIB2020/AI1103/blob/main/Assignment%203/Assignment%203.pdf
 \end{lstlisting}
-\section{\Large Problem\\ \large GATE 2015 (EE paper 01 new 2), Q. 27 (Electrical engg. section)}
+\section{\Large Problem\\ \large GATE 2015 (EE paper 01 new 2), Q. 27 (Electrical Engg. section)}
 
 Two players A, and B alternately keep rolling a fair dice. The person to get a six first wins the game. Given that player A starts the game, the probability that A wins the game is:\\[5pt]
 A: \dfrac{5}{11}\hspace{1cm}
