--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -126,13 +126,11 @@ and latex-tikz codes from
 https://github.com/VIB2020/AI1103/blob/main/Assignment%203/Assignment%203.pdf
 \end{lstlisting}
 \section{\Large Problem \\ \large GATE 2015 (EE paper 01 new 2), Q 27 (Electrical Engg section)}
-\onehalfspacing
 Two players A, and B alternately keep rolling a fair dice. The person to get a six first wins the game. Given that player A starts the game, the probability that A wins the game is:\\[5pt]
     A $\dfrac{5}{11}$ \hspace{1cm}
     B $\dfrac{1}{2}$ \hspace{1cm}
     C $\dfrac{7}{13}$ \hspace{1cm}
     D $\dfrac{6}{11}$ \hspace{1cm}
-\singlespacing
 \section{\Large Solution}
 \begin{description}
     \item Let the random variable X denote the win of A.
@@ -140,7 +138,6 @@ Two players A, and B alternately keep rolling a fair dice. The person to get a s
     \item The probability of getting 6 = $\dfrac{1}{6}$ = p (say)
     \item The probability of NOT getting 6 = $\dfrac{5}{6}$ = q (say)
 \end{description}
-\newline
 \begin{center}
 Markov chain for the given problem:
 \begin{tikzpicture}[font=\sffamily]
@@ -150,8 +147,8 @@ Markov chain for the given problem:
                                     fill=gray!20!white}}
 
     \node [node style] at (0, 0)     (a)     {A};
-    \node [node style] at (6, 0)     (b)     {B};
-    \node [node style] at (3, -5.196) (w) {Winner};
+    \node [node style] at (5, 0)     (b)     {B};
+    \node [node style] at (2.5, -4.3301) (w) {Winner};
     \draw[every loop,
           auto=right,
           line width=1mm,
@@ -165,36 +162,45 @@ Markov chain for the given problem:
         (b) edge[bend left=10, auto=left] node {$p = \frac{1}{6}$} (w)
 \end{tikzpicture}
 \end{center}
-\\[5pt]
-Transition matrix:\\[5pt]
-\begin{center}
-\Large
-$P = $
-\begin{bmatrix}
-0 & q & p\\
-q & 0 & p\\
-0 & 0 & 0
-\end{bmatrix}
-\normalsize
-\implies \lim_{n \to \infty} P^n \xrightarrow{} 0 \small \because p , q < 1
-\end{center}\\\\
+Transition/Stochastic matrix:\\
 \begin{math}
-    \implies P \text{is reducible}\\
-    \implies \lim_{n \to \infty}Pr_{AW}(n) = lim_{n \to \infty}Pr_{BW}(n) = 0\\
+    P = \myvec{
+    0 & q & p\\
+    q & 0 & p\\
+    0 & 0 & 0}
+    \implies \lim_{n \to \infty} P^n \xrightarrow{} 0 \small \because p , q < 1\\
+
+    \implies P \text{ is reducible}
+    \implies \lim_{n \to \infty}Pr_{AW}(n) = 0\\
 \end{math}\\
-\onehalfspacing
-\large  Constraint: A wins the game. \normalsize
-\begin{align}
+P$^n$ represents n rolls of dice\\
+Given: A starts the game\\
+Constraint: A wins the game.\\
+The initial operator representing this constraint:\\
+A$_1$ = \myvec{p & 0 & 0}\\
+First element of each A$_i$ represents the probability of A to win in i$^{th}$ roll\\
+\begin{math}
+    Pr_{AW}(1) = p\\
+    A_2 = A_1 P = \myvec{p & 0 & 0}\myvec{0 & q & 0\\ q & 0 & 0\\ p & p & 0}  = \myvec{0 & qp & 0}\\
+    \implies  Pr_{AW}(2) = 0\\
+    
+    A_3 = A_2 P = \myvec{0 & qp & 0} \myvec{0 & q & 0\\ q & 0 & 0\\ p & p & 0}= \myvec{q^2 p & 0 & 0}\\
+    \implies  Pr_{AW}(3) = q^2 p\\
+    
+    A_4 = \myvec{0 & q^3 p & 0} \implies  Pr_{AW}(4) = 0\\
+    A_5 = \myvec{q^4 p & 0 & 0} \implies  Pr_{AW}(5) = q^4 p\\
+    \text{By induction}:\\
+    A_{2n} = \myvec{0 & q^{2n - 1} p & 0} \implies Pr_{AW}(2n) = 0\\
+    A_{2n + 1} = \myvec{q^{2n} & 0 & 0}  \implies Pr_{AW}(2n + 1) = q^{2n} p\\
     \pr{\text{A wins}} = \sum_{n=1}^{\infty} Pr_{AW}(n)\\
     = Pr_{AW}(1) + Pr_{AW}(2) + Pr_{AW}(3) + ....\\
-    = P_{13} + 0 + P^3 _{13} + 0 + P^5 _{13} + ....\\
-    = p + q^2p + q^4p + ....\\
+    = p + 0 + q^2p + 0 + q^4p + ....\\
     = \sum_{k=1}^{\infty} q^2^k p
     = p \sum_{k=1}^{\infty} (q^2)^k \hspace{0.5cm} \text{But $|q| <$ 1}\\
-    = p \left(\dfrac{1}{1 - q^2}\right) = \dfrac{p}{1 - q^2}
-    =\dfrac{\dfrac{1}{6}}{1 - \dfrac{25}{36}} = \dfrac{6}{11}
-\end{align}
+    = p \left(\dfrac{1}{1 - q^2}\right)
+    =\dfrac{\frac{1}{6}}{1 - \frac{25}{36}} = \dfrac{6}{11}
+\end{math}
 \centering
-\Large \pr{\text{A wins the game}} = \pr{X} = \dfrac{6}{11}\\[6pt]
-Option D
+\Large \pr{\text{A wins the game}} = \dfrac{6}{11}
+\\Option D
 \end{document}
