--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -131,37 +131,38 @@ Two players A, and B alternately keep rolling a fair dice. The person to get a s
     C $\dfrac{7}{13}$ \hspace{1cm}
     D $\dfrac{6}{11}$ \hspace{1cm}
 \section{\Large Solution}
+
 \begin{definition}
     Let the random variable X denote the win of A.
     Given the die is fair.\\
     The probability of getting 6 = $\dfrac{1}{6}$ = p (say)\\
     The probability of NOT getting 6 = $\dfrac{5}{6}$ = q (say)\\
     Markov chain for the given problem:
-\end{definition}
-\begin{center}
-\begin{tikzpicture}[font=\sffamily]
-\tikzset{node style/.style={state, 
-                                    minimum width=1.4cm,
-                                    line width=0.5mm,
-                                    fill=gray!20!white}}
-
-    \node [node style] at (0, 0)     (a)     {A};
-    \node [node style] at (3, 0)     (b)     {B};
-    \node [node style] at (1.5, -2.5981) (w) {Winner};
-    \draw[every loop,
-          auto=right,
-          line width=1mm,
-          >=latex,
-          draw=orange,
-          fill=orange]
-        
-        (a) edge[bend right=20] node {$q = \frac{5}{6}$} (b)
-        (b) edge[bend right=20] node {$q = \frac{5}{6}$} (a)
-        (a) edge[bend right=10] node {$p = \frac{1}{6}$} (w)
-        (b) edge[bend left=10, auto=left] node {$p = \frac{1}{6}$} (w)
-\end{tikzpicture}
-\end{center}
-\begin{definition}
+    \begin{center}
+    \begin{tikzpicture}[font=\sffamily]
+    \tikzset{node style/.style={state, 
+                                        minimum width=1.4cm,
+                                        line width=0.5mm,
+                                        fill=gray!20!white}}
+    
+        \node [node style] at (0, 0)     (a)     {A};
+        \node [node style] at (3, 0)     (b)     {B};
+        \node [node style] at (1.5, -2.5981) (w) {Winner};
+        \draw[every loop,
+            auto=right,
+            line width=1mm,
+            >=latex,
+            draw=orange,
+            fill=orange]
+            
+            (a) edge[bend right=20] node {$q = \frac{5}{6}$} (b)
+            (b) edge[bend right=20] node {$q = \frac{5}{6}$} (a)
+            (a) edge[bend right=10] node {$p = \frac{1}{6}$} (w)
+            (b) edge[bend left=10, auto=left] node {$p =     \frac{1}{6}$} (w)
+    \end{tikzpicture}
+    \end{center}
+    
+\onehalfspacing
 Transition/Stochastic matrix:\\
     P = \myvec{
     0 & q & p\\
@@ -175,9 +176,7 @@ Transition/Stochastic matrix:\\
     Constraint: A wins the game.\\
     The initial operator representing this constraint:\\
     A$_1$ = \myvec{p & 0 & 0}\\
-    First element of each A$_i$ represents the probability of A to win in i$^{th}$ roll
-\end{definition}
-\begin{align*}
+    First element of each A$_i$ represents the probability of A to win in i$^{th}$ roll\\
     Pr_{AW}(1) = p\\
     A_2 = A_1 P = \myvec{p & 0 & 0}\myvec{0 & q & 0\\ q & 0 & 0\\ p & p & 0}  = \myvec{0 & qp & 0}\\
     \implies  Pr_{AW}(2) = 0\\
@@ -185,18 +184,24 @@ Transition/Stochastic matrix:\\
     \implies  Pr_{AW}(3) = q^2 p\\
     A_4 = \myvec{0 & q^3 p & 0} \implies  Pr_{AW}(4) = 0\\
     A_5 = \myvec{q^4 p & 0 & 0} \implies  Pr_{AW}(5) = q^4 p
-    \intertext{By induction:}
+    
+    By induction:
+    
     A_{2n} = \myvec{0 & q^{2n - 1} p & 0} \implies Pr_{AW}(2n) = 0\\
-    A_{2n + 1} = \myvec{q^{2n} & 0 & 0}  \implies Pr_{AW}(2n + 1) = q^{2n} p\\
+    A_{2n + 1} = \myvec{q^{2n} & 0 & 0}  \implies Pr_{AW}(2n + 1) = q^{2n} p
+    
     \pr{\text{A wins}} = \sum_{n=1}^{\infty} Pr_{AW}(n)\\
     = Pr_{AW}(1) + Pr_{AW}(2) + Pr_{AW}(3) + ....\\
     = p + 0 + q^2p + 0 + q^4p + ....\\
     = \sum_{k=1}^{\infty} q^2^k p
     = p \sum_{k=1}^{\infty} (q^2)^k \hspace{0.5cm} \text{But $|q| <$ 1}\\
+    
     = p \left(\dfrac{1}{1 - q^2}\right)
     =\dfrac{\frac{1}{6}}{1 - \frac{25}{36}} = \dfrac{6}{11}
-\end{align*}
+
+\end{definition}
 \centering
 \Large \pr{\text{A wins the game}} = \dfrac{6}{11}
 \\Option D
+
 \end{document}
