--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -54,6 +54,7 @@
 \newcommand{\BEQA}{\begin{eqnarray}}
 \newcommand{\EEQA}{\end{eqnarray}}
 \newcommand{\define}{\stackrel{\triangle}{=}}
+\newtheorem{definition}{}
 \bibliographystyle{IEEEtran}
 \raggedbottom
 \setlength{\parindent}{0pt}
