--- a/Assignment 3/Assignment 3.tex
+++ b/Assignment 3/Assignment 3.tex
@@ -182,11 +182,7 @@ Transition/Stochastic matrix:\\
     A_2 = A_1 P = \myvec{p & 0 & 0}\myvec{0 & q & 0\\ q & 0 & 0\\ p & p & 0}  = \myvec{0 & qp & 0}\\
     \implies  Pr_{AW}(2) = 0\\
     A_3 = A_2 P = \myvec{0 & qp & 0} \myvec{0 & q & 0\\ q & 0 & 0\\ p & p & 0}= \myvec{q^2 p & 0 & 0}\\
-    \implies  Pr_{AW}(3) = q^2 p\\
-    %A_4 = \myvec{0 & q^3 p & 0} \implies  Pr_{AW}(4) = 0\\
-    %A_5 = \myvec{q^4 p & 0 & 0} \implies  Pr_{AW}(5) = q^4 p\\
-    %A_{2n} = \myvec{0 & q^{2n - 1} p & 0} \implies Pr_{AW}(2n) = 0\\
-    %A_{2n + 1} = \myvec{q^{2n} & 0 & 0}  \implies Pr_{AW}(2n + 1) = q^{2n} p
+    \implies  Pr_{AW}(3) = q^2 p
 \end{definition}
 \begin{table}[h!]
     \begin{tabular}{|c|c|c|}
